--- a/html/index.html
+++ b/html/index.html
@@ -1,68 +1,94 @@
 <!DOCTYPE html>
 <html>
+  <head>
+    <!--Import Google Icon Font-->
+    <link
+      href="https://fonts.googleapis.com/icon?family=Material+Icons"
+      rel="stylesheet"
+    />
+    <!--Import materialize.css-->
+    <link
+      type="text/css"
+      rel="stylesheet"
+      href="./../css/materialize.min.css"
+      media="screen,projection"
+    />
+    <link
+      type="text/css"
+      rel="stylesheet"
+      href="./../css/custom.css"
+      media="screen,projection"
+    />
 
-<head>
-  <!--Import Google Icon Font-->
-  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet" />
-  <!--Import materialize.css-->
-  <link type="text/css" rel="stylesheet" href="./../css/materialize.min.css" media="screen,projection" />
-  <link type="text/css" rel="stylesheet" href="./../css/custom.css" media="screen,projection" />
+    <!--Let browser know website is optimized for mobile-->
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Shubham Mankar</title>
+    <meta charset="UTF-8" />
+  </head>
 
-  <!--Let browser know website is optimized for mobile-->
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Shubham Mankar</title>
-  <meta charset="UTF-8">
-</head>
-
-<body>
-  <nav class="z-depth-0">
-    <div class="nav-wrapper">
-      <a href="./index.html" class="brand-logo center logo" style="font-family: saintDF;">Shubham Mankar</a>
-      <a href="#" data-target="mobile-demo" class="sidenav-trigger"><i class="material-icons icon-color">menu</i></a>
-      <ul id="nav-mobile" class="right hide-on-med-and-down">
-        <li><a href="./experience.html" id="red-hover">Experience</a></li>
-        <li><a href="./projects.html" id="blue-hover">Projects</a></li>
-        <li><a href="./research.html" id="yellow-hover">Research</a></li>
-        <li><a href="./contact.html" id="green-hover">Contact</a></li>
-      </ul>
-    </div>
-  </nav>
-  <ul class="sidenav" id="mobile-demo">
-    <li><a href="./experience.html" id="red">Experience</a></li>
-    <li><a href="./projects.html" id="blue">Projects</a></li>
-    <li><a href="./research.html" id="yellow">Research</a></li>
-    <li><a href="./contact.html" id="green">Contact</a></li>
-  </ul>
-
-  <div class="container">
-    <div class="row flex" style="margin-top: 3%;">
-      <div class="col l4 m6 s8 offset-m3 offset-s2 valign-wrapper">
-        <img src="./../static/dp.png" style="width: 100%; height: auto;" alt="" />
+  <body>
+    <nav class="z-depth-0">
+      <div class="nav-wrapper">
+        <a
+          href="./index.html"
+          class="brand-logo center logo"
+          style="font-family: saintDF;"
+          >Shubham Mankar</a
+        >
+        <a href="#" data-target="mobile-demo" class="sidenav-trigger"
+          ><i class="material-icons icon-color">menu</i></a
+        >
+        <ul id="nav-mobile" class="right hide-on-med-and-down">
+          <li>
+            <a href="./html/experience.html" id="red-hover">Experience</a>
+          </li>
+          <li><a href="./html/projects.html" id="blue-hover">Projects</a></li>
+          <li><a href="./html/research.html" id="yellow-hover">Research</a></li>
+          <li><a href="./html/contact.html" id="green-hover">Contact</a></li>
+        </ul>
       </div>
-      <div class="col l8 s12">
-        <div class="row" style="padding-left: 10px;">
-          <h1 class="small-responsive-text" style="font-weight: lighter;">
-            Hello World!
-          </h1>
-          <div style="text-align: justify;">
-            I am a senior at the Mumbai University, majoring in Computer Engineering. Having worked on an array exciting
-            projects through my undergraduate degree, I am eager to explore new opportunities and work on innovative
-            projects. I love taking on challenges and am very quick to learn and adapt to the situation. I am currently
-            looking for Internships and jobs in Software Development.
+    </nav>
+    <ul class="sidenav" id="mobile-demo">
+      <li><a href="./html/experience.html" id="red">Experience</a></li>
+      <li><a href="./html/projects.html" id="blue">Projects</a></li>
+      <li><a href="./html/research.html" id="yellow">Research</a></li>
+      <li><a href="./html/contact.html" id="green">Contact</a></li>
+    </ul>
+
+    <div class="container">
+      <div class="row flex" style="margin-top: 3%;">
+        <div class="col l4 m6 s8 offset-m3 offset-s2 valign-wrapper">
+          <img
+            src="./../static/dp.png"
+            style="width: 100%; height: auto;"
+            alt=""
+          />
+        </div>
+        <div class="col l8 s12">
+          <div class="row" style="padding-left: 10px;">
+            <h1 class="small-responsive-text" style="font-weight: lighter;">
+              Hello World!
+            </h1>
+            <div style="text-align: justify;">
+              I am a senior at the Mumbai University, majoring in Computer
+              Engineering. Having worked on an array exciting projects through
+              my undergraduate degree, I am eager to explore new opportunities
+              and work on innovative projects. I love taking on challenges and
+              am very quick to learn and adapt to the situation. I am currently
+              looking for Internships and jobs in Software Development.
+            </div>
+          </div>
+          <div class="row" style="padding-left: 10px;">
+            <span class="tags tags-blue">Python</span>
+            <span class="tags tags-red">Web Development</span>
+            <span class="tags tags-green">AWS Services</span>
           </div>
         </div>
-        <div class="row" style="padding-left: 10px;">
-          <span class="tags tags-blue">Python</span>
-          <span class="tags tags-red">Web Development</span>
-          <span class="tags tags-green">AWS Services</span>
-        </div>
       </div>
     </div>
-  </div>
 
-  <!--JavaScript at end of body for optimized loading-->
-  <script type="text/javascript" src="./../js/materialize.min.js"></script>
-  <script type="text/javascript" src="./../js/custom.js"></script>
-</body>
-
+    <!--JavaScript at end of body for optimized loading-->
+    <script type="text/javascript" src="./js/materialize.min.js"></script>
+    <script type="text/javascript" src="./js/custom.js"></script>
+  </body>
 </html>
