--- a/html/contact.html
+++ b/html/contact.html
@@ -1,70 +1,110 @@
 <!DOCTYPE html>
 <html>
+  <head>
+    <!--Import Google Icon Font-->
+    <link
+      href="https://fonts.googleapis.com/icon?family=Material+Icons"
+      rel="stylesheet"
+    />
+    <!--Import materialize.css-->
+    <link
+      type="text/css"
+      rel="stylesheet"
+      href="./../css/materialize.min.css"
+      media="screen,projection"
+    />
+    <link
+      type="text/css"
+      rel="stylesheet"
+      href="./../css/custom.css"
+      media="screen,projection"
+    />
 
-<head>
-  <!--Import Google Icon Font-->
-  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet" />
-  <!--Import materialize.css-->
-  <link type="text/css" rel="stylesheet" href="./../css/materialize.min.css" media="screen,projection" />
-  <link type="text/css" rel="stylesheet" href="./../css/custom.css" media="screen,projection" />
+    <!--Let browser know website is optimized for mobile-->
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Contact</title>
+  </head>
 
-  <!--Let browser know website is optimized for mobile-->
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Contact</title>
-</head>
-
-<body>
-  <nav class="z-depth-0">
-    <div class="nav-wrapper">
-      <a href="./index.html" class="brand-logo center logo" style="font-family: saintDF;">Shubham Mankar</a>
-      <a href="#" data-target="mobile-demo" class="sidenav-trigger"><i class="material-icons icon-color">menu</i></a>
-      <ul id="nav-mobile" class="right hide-on-med-and-down">
-        <li><a href="./experience.html" id="red-hover">Experience</a></li>
-        <li><a href="./projects.html" id="blue-hover">Projects</a></li>
-        <li><a href="./research.html" id="yellow-hover">Research</a></li>
-        <li><a href="./contact.html" id="green-select">Contact</a></li>
-      </ul>
+  <body>
+    <nav class="z-depth-0">
+      <div class="nav-wrapper">
+        <a
+          href="./../index.html"
+          class="brand-logo center logo"
+          style="font-family: saintDF;"
+          >Shubham Mankar</a
+        >
+        <a href="#" data-target="mobile-demo" class="sidenav-trigger"
+          ><i class="material-icons icon-color">menu</i></a
+        >
+        <ul id="nav-mobile" class="right hide-on-med-and-down">
+          <li><a href="./experience.html" id="red-hover">Experience</a></li>
+          <li><a href="./projects.html" id="blue-hover">Projects</a></li>
+          <li><a href="./research.html" id="yellow-hover">Research</a></li>
+          <li><a href="./contact.html" id="green-select">Contact</a></li>
+        </ul>
+      </div>
+    </nav>
+    <ul class="sidenav" id="mobile-demo">
+      <li><a href="./experience.html" id="red">Experience</a></li>
+      <li><a href="./projects.html" id="blue">Projects</a></li>
+      <li><a href="./research.html" id="yellow">Research</a></li>
+      <li><a href="./contact.html" id="green-select">Contact</a></li>
+    </ul>
+    <div>
+      <img
+        src="./../static/contact.jpg"
+        alt=""
+        style="height: 30vh; width: 100%; object-fit: cover;"
+      />
     </div>
-  </nav>
-  <ul class="sidenav" id="mobile-demo">
-    <li><a href="./experience.html" id="red">Experience</a></li>
-    <li><a href="./projects.html" id="blue">Projects</a></li>
-    <li><a href="./research.html" id="yellow">Research</a></li>
-    <li><a href="./contact.html" id="green-select">Contact</a></li>
-  </ul>
-  <div>
-    <img src="./../static/contact.jpg" alt="" style="height: 30vh; width: 100%; object-fit: cover;" />
-  </div>
-  <div class="container">
-    <div class="row">
-      <div class="col l6 m10 s12 offset-l3 offset-m1">
-        <h3 class="small-responsive-text center-align" style="font-weight: lighter;">Reach Out...</h3><br>
+    <div class="container">
+      <div class="row">
+        <div class="col l6 m10 s12 offset-l3 offset-m1">
+          <h3
+            class="small-responsive-text center-align"
+            style="font-weight: lighter;"
+          >
+            Reach Out...
+          </h3>
+          <br />
+        </div>
+      </div>
+      <div class="row">
+        <a href="https://www.instagram.com/themrshubh/" target="_blank">
+          <div class="col l2 m2 s4 offset-l3 offset-m3 center-align">
+            <img
+              src="./../static/insta.png"
+              style="height: 10vh; width: auto;"
+              alt=""
+            />
+            <div>themrshubh</div>
+          </div>
+        </a>
+        <a href="">
+          <div class="col l2 m2 s4 center-align">
+            <img
+              src="./../static/linked.png"
+              style="height: 10vh; width: auto;"
+              alt=""
+            />
+            <div>Shubham Mankar</div>
+          </div>
+        </a>
+        <a href="">
+          <div class="col l2 m2 s4 center-align">
+            <img
+              src="./../static/twitter.png"
+              style="height: 10vh; width: auto;"
+              alt=""
+            />
+            <div>themrshubh</div>
+          </div>
+        </a>
       </div>
     </div>
-    <div class="row">
-      <a href="https://www.instagram.com/themrshubh/" target="_blank">
-        <div class=" col l2 m2 s4 offset-l3 offset-m3 center-align">
-          <img src="./../static/insta.png" style="height: 10vh; width: auto;" alt="">
-          <div>themrshubh</div>
-        </div>
-      </a>
-      <a href="">
-        <div class="col l2 m2 s4 center-align">
-          <img src="./../static/linked.png" style="height: 10vh; width: auto;" alt="">
-          <div>Shubham Mankar</div>
-        </div>
-      </a>
-      <a href="">
-        <div class="col l2 m2 s4 center-align">
-          <img src="./../static/twitter.png" style="height: 10vh; width: auto;" alt="">
-          <div>themrshubh</div>
-        </div>
-      </a>
-    </div>
-  </div>
-  <!--JavaScript at end of body for optimized loading-->
-  <script type="text/javascript" src="./../js/materialize.min.js"></script>
-  <script type="text/javascript" src="./../js/custom.js"></script>
-</body>
-
+    <!--JavaScript at end of body for optimized loading-->
+    <script type="text/javascript" src="./../js/materialize.min.js"></script>
+    <script type="text/javascript" src="./../js/custom.js"></script>
+  </body>
 </html>
