--- a/html/experience.html
+++ b/html/experience.html
@@ -18,7 +18,7 @@
   <div class="navbar-fixed">
     <nav class="z-depth-0">
       <div class="nav-wrapper">
-        <a href="./index.html" class="brand-logo center logo" style="font-family: saintDF;">Shubham Mankar</a>
+        <a href="./../index.html" class="brand-logo center logo" style="font-family: saintDF;">Shubham Mankar</a>
         <a href="#" data-target="mobile-demo" class="sidenav-trigger"><i class="material-icons icon-color">menu</i></a>
         <ul id="nav-mobile" class="right hide-on-med-and-down">
           <li><a href="./experience.html" id="red-select">Experience</a></li>
