--- a/html/proj_one.html
+++ b/html/proj_one.html
@@ -1,82 +1,112 @@
 <!DOCTYPE html>
 <html>
+  <head>
+    <!--Import Google Icon Font-->
+    <link
+      href="https://fonts.googleapis.com/icon?family=Material+Icons"
+      rel="stylesheet"
+    />
+    <!--Import materialize.css-->
+    <link
+      type="text/css"
+      rel="stylesheet"
+      href="./../css/materialize.min.css"
+      media="screen,projection"
+    />
+    <link
+      type="text/css"
+      rel="stylesheet"
+      href="./../css/custom.css"
+      media="screen,projection"
+    />
 
-<head>
-  <!--Import Google Icon Font-->
-  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet" />
-  <!--Import materialize.css-->
-  <link type="text/css" rel="stylesheet" href="./../css/materialize.min.css" media="screen,projection" />
-  <link type="text/css" rel="stylesheet" href="./../css/custom.css" media="screen,projection" />
+    <!--Let browser know website is optimized for mobile-->
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Projects</title>
+  </head>
 
-  <!--Let browser know website is optimized for mobile-->
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Projects</title>
-</head>
-
-<body>
-  <nav class="z-depth-0">
-    <div class="nav-wrapper">
-      <a href="./index.html" class="brand-logo center logo" style="font-family: saintDF;">Shubham Mankar</a>
-      <a href="#" data-target="mobile-demo" class="sidenav-trigger"><i class="material-icons icon-color">menu</i></a>
-      <ul id="nav-mobile" class="right hide-on-med-and-down">
-        <li><a href="./experience.html" id="red-hover">Experience</a></li>
-        <li><a href="./projects.html" id="blue-select">Projects</a></li>
-        <li><a href="./research.html" id="yellow-hover">Research</a></li>
-        <li><a href="./contact.html" id="green-hover">Contact</a></li>
-      </ul>
-    </div>
-  </nav>
-  <ul class="sidenav" id="mobile-demo">
-    <li><a href="./experience.html" id="red">Experience</a></li>
-    <li><a href="./projects.html" id="blue-select">Projects</a></li>
-    <li><a href="./research.html" id="yellow">Research</a></li>
-    <li><a href="./contact.html" id="green">Contact</a></li>
-  </ul>
-  <div>
-    <img src="./../static/alexa.jpg" alt="" style="height: 30vh; width: 100%; object-fit: cover;" />
-  </div>
-  <div class="contatiner">
-    <div class="row">
-      <div class="col s10 m10 l8 offset-l2 offset-m1 offset-s1">
-        <h5 class="small-responsive-text center" style="font-weight: 200;">AI-Based Virtual Assistant for Medical
-          <br>Monitoring and Diagnosis</h5>
+  <body>
+    <nav class="z-depth-0">
+      <div class="nav-wrapper">
+        <a
+          href="./../index.html"
+          class="brand-logo center logo"
+          style="font-family: saintDF;"
+          >Shubham Mankar</a
+        >
+        <a href="#" data-target="mobile-demo" class="sidenav-trigger"
+          ><i class="material-icons icon-color">menu</i></a
+        >
+        <ul id="nav-mobile" class="right hide-on-med-and-down">
+          <li><a href="./experience.html" id="red-hover">Experience</a></li>
+          <li><a href="./projects.html" id="blue-select">Projects</a></li>
+          <li><a href="./research.html" id="yellow-hover">Research</a></li>
+          <li><a href="./contact.html" id="green-hover">Contact</a></li>
+        </ul>
       </div>
+    </nav>
+    <ul class="sidenav" id="mobile-demo">
+      <li><a href="./experience.html" id="red">Experience</a></li>
+      <li><a href="./projects.html" id="blue-select">Projects</a></li>
+      <li><a href="./research.html" id="yellow">Research</a></li>
+      <li><a href="./contact.html" id="green">Contact</a></li>
+    </ul>
+    <div>
+      <img
+        src="./../static/alexa.jpg"
+        alt=""
+        style="height: 30vh; width: 100%; object-fit: cover;"
+      />
     </div>
-    <div class="row">
-      <div class="col s10 m10 l8 offset-l2 offset-m1 offset-s1 right-align">
-        <a href="./projects.html" style="float:left">Back</a>
-        <span class="tags tags-blue">AWS</span>
-        <span class="tags tags-green">Alexa Skill</span>
-        <span class="tags tags-red">DynamoDB</span>
-        <span class="tags tags-yellow">Sentiment Analysis</span>
+    <div class="contatiner">
+      <div class="row">
+        <div class="col s10 m10 l8 offset-l2 offset-m1 offset-s1">
+          <h5 class="small-responsive-text center" style="font-weight: 200;">
+            AI-Based Virtual Assistant for Medical <br />Monitoring and
+            Diagnosis
+          </h5>
+        </div>
       </div>
-    </div>
-    <div class="row">
-      <div class="col s10 m10 l8 offset-l2 offset-m1 offset-s1">
-        <div class="project-info">
-          In this project, I aimed to create a system to aid psychiatrists in communicating better with their patients
-          and staying up-to-date with the patients' progress. I designed numerous subsystems that handled different
-          aspects of the project, like sentiment analysis, APIs, voice user interface, and data storage. I created
-          multiple interfaces between these subsystems to enable robust communication between them to provide a
-          connected and consistent system.
-          I used Amazon's Alexa, which enabled users to record their thoughts, and it supported the psychiatrists to
-          track patients' progress. The contextual nature of these conversations made them natural and intuitive. The
-          custom-developed Alexa skill collected all the required parameters elegantly merely by engaging the user in
-          the conversation. The use of sentiment analysis made the conversations more dynamic and gave Alexa a human
-          touch.
-          The system used highly scalable platforms to store user data, thus supporting upgradability. Using principles
-          of Human-Machine interactions, we also developed a web application with a beautiful yet productive design. The
-          web interface provided to the psychiatrists displayed user information on various levels of complexity. Thus,
-          through this project, my team and I tried our best to deliver the functionalities promised while implementing
-          experimental and innovative techniques.
+      <div class="row">
+        <div class="col s10 m10 l8 offset-l2 offset-m1 offset-s1 right-align">
+          <a href="./projects.html" style="float: left;">Back</a>
+          <span class="tags tags-blue">AWS</span>
+          <span class="tags tags-green">Alexa Skill</span>
+          <span class="tags tags-red">DynamoDB</span>
+          <span class="tags tags-yellow">Sentiment Analysis</span>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col s10 m10 l8 offset-l2 offset-m1 offset-s1">
+          <div class="project-info">
+            In this project, I aimed to create a system to aid psychiatrists in
+            communicating better with their patients and staying up-to-date with
+            the patients' progress. I designed numerous subsystems that handled
+            different aspects of the project, like sentiment analysis, APIs,
+            voice user interface, and data storage. I created multiple
+            interfaces between these subsystems to enable robust communication
+            between them to provide a connected and consistent system. I used
+            Amazon's Alexa, which enabled users to record their thoughts, and it
+            supported the psychiatrists to track patients' progress. The
+            contextual nature of these conversations made them natural and
+            intuitive. The custom-developed Alexa skill collected all the
+            required parameters elegantly merely by engaging the user in the
+            conversation. The use of sentiment analysis made the conversations
+            more dynamic and gave Alexa a human touch. The system used highly
+            scalable platforms to store user data, thus supporting
+            upgradability. Using principles of Human-Machine interactions, we
+            also developed a web application with a beautiful yet productive
+            design. The web interface provided to the psychiatrists displayed
+            user information on various levels of complexity. Thus, through this
+            project, my team and I tried our best to deliver the functionalities
+            promised while implementing experimental and innovative techniques.
+          </div>
         </div>
       </div>
     </div>
-  </div>
 
-  <!--JavaScript at end of body for optimized loading-->
-  <script type="text/javascript" src="./../js/materialize.min.js"></script>
-  <script type="text/javascript" src="./../js/custom.js"></script>
-</body>
-
+    <!--JavaScript at end of body for optimized loading-->
+    <script type="text/javascript" src="./../js/materialize.min.js"></script>
+    <script type="text/javascript" src="./../js/custom.js"></script>
+  </body>
 </html>
