--- a/html/projects.html
+++ b/html/projects.html
@@ -1,84 +1,112 @@
 <!DOCTYPE html>
 <html>
+  <head>
+    <!--Import Google Icon Font-->
+    <link
+      href="https://fonts.googleapis.com/icon?family=Material+Icons"
+      rel="stylesheet"
+    />
+    <!--Import materialize.css-->
+    <link
+      type="text/css"
+      rel="stylesheet"
+      href="./../css/materialize.min.css"
+      media="screen,projection"
+    />
+    <link
+      type="text/css"
+      rel="stylesheet"
+      href="./../css/custom.css"
+      media="screen,projection"
+    />
 
-<head>
-  <!--Import Google Icon Font-->
-  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet" />
-  <!--Import materialize.css-->
-  <link type="text/css" rel="stylesheet" href="./../css/materialize.min.css" media="screen,projection" />
-  <link type="text/css" rel="stylesheet" href="./../css/custom.css" media="screen,projection" />
+    <!--Let browser know website is optimized for mobile-->
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Projects</title>
+  </head>
 
-  <!--Let browser know website is optimized for mobile-->
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Projects</title>
-</head>
-
-<body>
-  <nav class="z-depth-0">
-    <div class="nav-wrapper">
-      <a href="./index.html" class="brand-logo center logo" style="font-family: saintDF;">Shubham Mankar</a>
-      <a href="#" data-target="mobile-demo" class="sidenav-trigger"><i class="material-icons icon-color">menu</i></a>
-      <ul id="nav-mobile" class="right hide-on-med-and-down">
-        <li><a href="./experience.html" id="red-hover">Experience</a></li>
-        <li><a href="./projects.html" id="blue-select">Projects</a></li>
-        <li><a href="./research.html" id="yellow-hover">Research</a></li>
-        <li><a href="./contact.html" id="green-hover">Contact</a></li>
-      </ul>
+  <body>
+    <nav class="z-depth-0">
+      <div class="nav-wrapper">
+        <a
+          href="./../index.html"
+          class="brand-logo center logo"
+          style="font-family: saintDF;"
+          >Shubham Mankar</a
+        >
+        <a href="#" data-target="mobile-demo" class="sidenav-trigger"
+          ><i class="material-icons icon-color">menu</i></a
+        >
+        <ul id="nav-mobile" class="right hide-on-med-and-down">
+          <li><a href="./experience.html" id="red-hover">Experience</a></li>
+          <li><a href="./projects.html" id="blue-select">Projects</a></li>
+          <li><a href="./research.html" id="yellow-hover">Research</a></li>
+          <li><a href="./contact.html" id="green-hover">Contact</a></li>
+        </ul>
+      </div>
+    </nav>
+    <ul class="sidenav" id="mobile-demo">
+      <li><a href="./experience.html" id="red">Experience</a></li>
+      <li><a href="./projects.html" id="blue-select">Projects</a></li>
+      <li><a href="./research.html" id="yellow">Research</a></li>
+      <li><a href="./contact.html" id="green">Contact</a></li>
+    </ul>
+    <div>
+      <img
+        src="./../static/project.jpg"
+        alt=""
+        style="height: 30vh; width: 100%; object-fit: cover;"
+      />
     </div>
-  </nav>
-  <ul class="sidenav" id="mobile-demo">
-    <li><a href="./experience.html" id="red">Experience</a></li>
-    <li><a href="./projects.html" id="blue-select">Projects</a></li>
-    <li><a href="./research.html" id="yellow">Research</a></li>
-    <li><a href="./contact.html" id="green">Contact</a></li>
-  </ul>
-  <div>
-    <img src="./../static/project.jpg" alt="" style="height: 30vh; width: 100%; object-fit: cover;" />
-  </div>
-  <div class="contatiner">
-    <div class="row row-bottom-margin">
-      <div class="col m10 l8 offset-l2 offset-m1">
-        <a href="./proj_one.html" class="custom-card">
-          <div class="card z-depth-0 color-card">
-            <div class="card-content">
-              <div class="project-title valign-wrapper">
-                <span class="tags tags-blue" style="margin-right: 10px;">2019</span>
-                AI-based Virtual Assistant for Medical Monitoring and
-                Diagnostics
-                <i class="material-icons right">add</i>
+    <div class="contatiner">
+      <div class="row row-bottom-margin">
+        <div class="col m10 l8 offset-l2 offset-m1">
+          <a href="./proj_one.html" class="custom-card">
+            <div class="card z-depth-0 color-card">
+              <div class="card-content">
+                <div class="project-title valign-wrapper">
+                  <span class="tags tags-blue" style="margin-right: 10px;"
+                    >2019</span
+                  >
+                  AI-based Virtual Assistant for Medical Monitoring and
+                  Diagnostics
+                  <i class="material-icons right">add</i>
+                </div>
               </div>
             </div>
-          </div>
-        </a>
-        <a href="./proj_two.html" class="custom-card">
-          <div class="card z-depth-0 color-card">
-            <div class="card-content">
-              <div class="project-title valign-wrapper">
-                <span class="tags tags-blue" style="margin-right: 10px;">2019</span>
-                Android Application for Crop Disease Detection
-                <i class="material-icons right">add</i>
+          </a>
+          <a href="./proj_two.html" class="custom-card">
+            <div class="card z-depth-0 color-card">
+              <div class="card-content">
+                <div class="project-title valign-wrapper">
+                  <span class="tags tags-blue" style="margin-right: 10px;"
+                    >2019</span
+                  >
+                  Android Application for Crop Disease Detection
+                  <i class="material-icons right">add</i>
+                </div>
               </div>
             </div>
-          </div>
-        </a>
-        <a href="./proj_three.html" class="custom-card">
-          <div class="card z-depth-0 color-card">
-            <div class="card-content">
-              <div class="project-title valign-wrapper">
-                <span class="tags tags-blue" style="margin-right: 10px;">2018</span>
-                Web Interface for Management-Student Communication
-                <i class="material-icons right">add</i>
+          </a>
+          <a href="./proj_three.html" class="custom-card">
+            <div class="card z-depth-0 color-card">
+              <div class="card-content">
+                <div class="project-title valign-wrapper">
+                  <span class="tags tags-blue" style="margin-right: 10px;"
+                    >2018</span
+                  >
+                  Web Interface for Management-Student Communication
+                  <i class="material-icons right">add</i>
+                </div>
               </div>
             </div>
-          </div>
-        </a>
+          </a>
+        </div>
       </div>
     </div>
-  </div>
 
-  <!--JavaScript at end of body for optimized loading-->
-  <script type="text/javascript" src="./../js/materialize.min.js"></script>
-  <script type="text/javascript" src="./../js/custom.js"></script>
-</body>
-
+    <!--JavaScript at end of body for optimized loading-->
+    <script type="text/javascript" src="./../js/materialize.min.js"></script>
+    <script type="text/javascript" src="./../js/custom.js"></script>
+  </body>
 </html>
