--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
   <!--Import Google Icon Font-->
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet" />
   <!--Import materialize.css-->
-  <link type="text/css" rel="stylesheet" href="./../css/materialize.min.css" media="screen,projection" />
-  <link type="text/css" rel="stylesheet" href="./../css/custom.css" media="screen,projection" />
+  <link type="text/css" rel="stylesheet" href="./css/materialize.min.css" media="screen,projection" />
+  <link type="text/css" rel="stylesheet" href="./css/custom.css" media="screen,projection" />
 
   <!--Let browser know website is optimized for mobile-->
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -39,7 +39,7 @@
   <div class="container">
     <div class="row flex" style="margin-top: 3%;">
       <div class="col l4 m6 s8 offset-m3 offset-s2 valign-wrapper">
-        <img src="./../static/dp.png" style="width: 100%; height: auto;" alt="" />
+        <img src="./static/dp.png" style="width: 100%; height: auto;" alt="" />
       </div>
       <div class="col l8 s12">
         <div class="row" style="padding-left: 10px;">
