Minor tweaks, broken link fix 👀

--- a/index.html
+++ b/index.html
@@ -20,9 +20,7 @@
       <a href="./index.html" class="brand-logo center logo" style="font-family: saintDF;">Shubham Mankar</a>
       <a href="#" data-target="mobile-demo" class="sidenav-trigger"><i class="material-icons icon-color">menu</i></a>
       <ul id="nav-mobile" class="right hide-on-med-and-down">
-        <li>
-          <a href="./html/experience.html" id="red-hover">Experience</a>
-        </li>
+        <li><a href="./html/experience.html" id="red-hover">Experience</a></li>
         <li><a href="./html/projects.html" id="blue-hover">Projects</a></li>
         <li><a href="./html/research.html" id="yellow-hover">Research</a></li>
         <li><a href="./html/contact.html" id="green-hover">Contact</a></li>
