--- a/html/contact.html
+++ b/html/contact.html
@@ -53,13 +53,13 @@
       </a>
       <a href="https://www.linkedin.com/in/smankar/" target="_blank">
         <div class="col l2 m2 s4 center-align">
-          <img src="./../static/linked.png" style="height: 10vh; width: auto;" alt="" />
+          <img src="./../static/linkedin.png" style="height: 10vh; width: auto;" alt="" />
           <div>Shubham Mankar</div>
         </div>
       </a>
-      <a href="https://twitter.com/TheMrShubh" target="_blank">
+      <a href="https://twitter.com/themrshubh" target="_blank">
         <div class="col l2 m2 s4 center-align">
-          <img src="./../static/twitter.png" style="height: 10vh; width: auto;" alt="" />
+          <img src="./../static/twitter.svg" style="height: 10vh; width: auto;" alt="" />
           <div>themrshubh</div>
         </div>
       </a>
