--- a/html/experience.html
+++ b/html/experience.html
@@ -24,7 +24,6 @@
           <li><a href="./experience.html" id="red-select">Experience</a></li>
           <li><a href="./projects.html" id="blue-hover">Projects</a></li>
           <li><a href="./research.html" id="yellow-hover">Research</a></li>
-          <li><a href="./contact.html" id="green-hover">Contact</a></li>
         </ul>
       </div>
     </nav>
@@ -33,12 +32,47 @@
     <li><a href="./experience.html" id="red-select">Experience</a></li>
     <li><a href="./projects.html" id="blue">Projects</a></li>
     <li><a href="./research.html" id="yellow">Research</a></li>
-    <li><a href="./contact.html" id="green">Contact</a></li>
   </ul>
   <div>
     <img src="./../static/experience.jpg" alt="" style="height: 30vh; width: 100%; object-fit: cover;">
   </div>
   <div class="container">
+    <div class="row row-bottom-margin">
+      <div class="col m10 l8 offset-l2 offset-m1">
+        <div class="card z-depth-0 color-card">
+          <div class="card-content">
+            <span class="card-title activator">
+              Nudron IoT Solutions
+              <span style="color: greenyellow; font-size: 12px">Current</span>
+              <i class=" material-icons right">more_vert</i>
+            </span>
+            <p class="left-align">Software Development Engineer</p><br>
+            <p style=" color: gray;">
+              Working at Nudron has given me a great insight into how companies operate. At Nudron, I am developing a single page web application using Vue.JS 
+              while also assisting the team in back-end technologies and processes. 
+              Nudron has enabled me to develop my soft skills while simultaneously burgeoning my technological understanding.
+            </p><br>
+            <div class="right-align">
+              <span class="tags tags-orange">AWS</span>
+              <span class="tags tags-blue">Golang</span>
+              <span class="tags tags-green">Vue.js</span>
+              <span class="tags tags-yellow">JS</span>
+            </div>
+          </div>
+          <div class="card-reveal" id="color-reveal">
+            <div class="card-title">Nudron IoT Solutions | 2020<i class="material-icons right">close</i></div><br>
+            <div style="font-size: 14px;">
+              As a SDE at Nudron, I am working on a plethora of development processes simultaneously. I am currently working on developing a web
+              based dashboard which provides multiple intuitive features to its users. These features require the use of various technologies including 
+              mapping and charting libraries, user authentication, code development pipelines, version control systems, etc. To keep up with the rapid changes in the 
+              requirements, I had to very quickly adapt and learn new technologies and services like AWS CodePipeline, AWS CodeCommit, AWS Cognito, AWS API Gateway, OAuth Standards, 
+              Google Maps, AWS EC2, Bootstrap and Vue.JS. To further save time and automate processes, I developed various helper packages and functions using Golang. This experience though 
+              overwhelming at times, has helped me understand the demanding nature of working as an SDE.
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
     <div class="row row-bottom-margin">
       <div class="col m10 l8 offset-l2 offset-m1">
         <div class="card z-depth-0 color-card">
