--- a/index.html
+++ b/index.html
@@ -23,7 +23,6 @@
         <li><a href="./html/experience.html" id="red-hover">Experience</a></li>
         <li><a href="./html/projects.html" id="blue-hover">Projects</a></li>
         <li><a href="./html/research.html" id="yellow-hover">Research</a></li>
-        <li><a href="./html/contact.html" id="green-hover">Contact</a></li>
       </ul>
     </div>
   </nav>
@@ -31,7 +30,6 @@
     <li><a href="./html/experience.html" id="red">Experience</a></li>
     <li><a href="./html/projects.html" id="blue">Projects</a></li>
     <li><a href="./html/research.html" id="yellow">Research</a></li>
-    <li><a href="./html/contact.html" id="green">Contact</a></li>
   </ul>
 
   <div class="container">
@@ -45,18 +43,32 @@
             Hello World!
           </h1>
           <div style="text-align: justify;">
-            I am a senior at the Mumbai University, majoring in Computer
+            I am a recent Mumbai University graduate with a major in Computer
             Engineering. Having worked on an array exciting projects through
             my undergraduate degree, I am eager to explore new opportunities
             and work on innovative projects. I love taking on challenges and
             am very quick to learn and adapt to the situation. I am currently
-            looking for Internships and jobs in Software Development.
+            working as a Software Development Engineer at Nudron Iot Solutions, Mumbai.
+            Further, I am also an incoming 
+            <span style="color: #c93131"> NC State University</span> 
+            graduate student, joining the program in Fall 2021. 
+            While I am currently working on projects using 
+            <span style="color: #31c96b">Vue.JS</span>,
+            <span style="color: #31abc9">Golang </span>and
+            <span style="color: #c99431">AWS services</span>, I want to 
+            experiement with and learn iOS development.
           </div>
         </div>
         <div class="row" style="padding-left: 10px;">
-          <span class="tags tags-blue">Python</span>
-          <span class="tags tags-red">Web Development</span>
-          <span class="tags tags-green">AWS Services</span>
+          <a href="https://www.instagram.com/themrshubh/" target="_blank">
+            <img src="./static/instagram.svg" class="icon" />
+          </a>
+          <a href="https://www.linkedin.com/in/smankar/" target="_blank">
+            <img src="./static/linkedin.svg" class="icon" />
+          </a>
+          <a href="https://twitter.com/themrshubh" target="_blank">
+            <img src="./static/twitter.svg" class="icon" />
+          </a>
         </div>
       </div>
     </div>
