--- a/index.html
+++ b/index.html
@@ -12,6 +12,12 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Shubham Mankar</title>
   <meta charset="UTF-8" />
+
+  <!-- Information about the website. Helpful when pasting links on Linkedin etc. -->
+  <meta name="title" property="og:title" content="Shubham Mankar" />
+  <meta name="image" property="og:image" content="https://live.staticflickr.com/65535/50819882366_41daa64f7f_b.jpg" />
+  <meta name="description" property="og:description" content="Shubham Mankar's Website" />
+  <meta name="author" content="Shubham Mankar" />
 </head>
 
 <body>
@@ -43,8 +49,8 @@
             Hello World!
           </h1>
           <div style="text-align: justify;">
-            I am a recent Mumbai University graduate with a major in Computer
-            Engineering. Having worked on an array exciting projects through
+            I am a graduate with a Bachelor's Degree from Mumbai University, majoring 
+            in Computer Engineering. Having worked on an array exciting projects through
             my undergraduate degree, I am eager to explore new opportunities
             and work on innovative projects. I love taking on challenges and
             am very quick to learn and adapt to the situation. I am currently
