Minor changes to structure

--- a/index.html
+++ b/index.html
@@ -33,19 +33,21 @@
     </div>
   </nav>
   <ul class="sidenav" id="mobile-demo">
-    <li><a href="./html/experience.html" id="red">Experience</a></li>
+    <li style="padding-top: 5%"><a href="./html/experience.html" id="red">Experience</a></li>
     <li><a href="./html/projects.html" id="blue">Projects</a></li>
     <li><a href="./html/research.html" id="yellow">Research</a></li>
   </ul>
 
   <div class="container">
-    <div class="row flex" style="margin-top: 3%;">
-      <div class="col l4 m6 s8 offset-m3 offset-s2 valign-wrapper">
-        <img src="./static/dp.png" style="width: 100%; height: auto;" alt="" />
+    <div class="row" style="margin-top: 3%;">
+      <div class="col valign-wrapper" style="width: 100%">
+        <img class="img-center" src="./static/dp.png" alt="Shubham's Profile Picture" />
       </div>
-      <div class="col l8 s12">
-        <div class="row" style="padding-left: 10px;">
-          <h1 class="small-responsive-text" style="font-weight: lighter;">
+    </div>
+    <div class="row">
+      <div class="col">
+        <div class="row">
+          <h1 class="center-align small-responsive-text" style="font-weight: lighter;">
             Hello World!
           </h1>
           <div style="text-align: justify;">
@@ -65,7 +67,7 @@
             experiement with and learn iOS development.
           </div>
         </div>
-        <div class="row" style="padding-left: 10px;">
+        <div class="row">
           <a href="https://www.instagram.com/themrshubh/" target="_blank">
             <img src="./static/instagram.svg" class="icon" />
           </a>
